examples/test/testpolicy10825.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10825
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key43: value25
      key17: value49
      key27: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value13
          key36: value24
          key29: value24
      podSelector:
        matchLabels:
          key39: value28
          key30: value48
